cmake_minimum_required(VERSION 3.19)
project(Learn-OpenCV-cpp-in-4-Hours)

# set environment variable 'OPENCV_ROOT' before run cmake
# set OPENCV_ROOT=D:\app\opencv-4.5.2-vc14_vc15\opencv\build

add_subdirectory(Chapter1)
add_subdirectory(Chapter2)
add_subdirectory(Chapter3)
add_subdirectory(Chapter4)
add_subdirectory(Chapter5)
add_subdirectory(Chapter6)
add_subdirectory(Chapter7)
add_subdirectory(Chapter8)
add_subdirectory(Project1)
add_subdirectory(Project2)
add_subdirectory(Project3)
